[gd_scene load_steps=8 format=3 uid="uid://brqhwfxwi1poh"]

[ext_resource type="PackedScene" uid="uid://b52oqqpc2t3vc" path="res://MobBase.tscn" id="1_gu5ds"]
[ext_resource type="Script" uid="uid://dos5ciloplbpq" path="res://Systems/Enemy/Flailing Enemy/melee_flail_enemy.gd" id="2_o8rdq"]
[ext_resource type="Script" uid="uid://cutcl24p4stoe" path="res://Systems/Combat/hurtbox.gd" id="3_bssw2"]
[ext_resource type="Script" uid="uid://bn46hciwyy2f8" path="res://Systems/Enemy/Flailing Enemy/flail_charge.gd" id="4_82rk8"]
[ext_resource type="Script" uid="uid://bw8a5hff60bi" path="res://Systems/Enemy/Flailing Enemy/quick_slash.gd" id="5_67syi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s2pa2"]
radius = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rn783"]
radius = 6.0
height = 16.0

[node name="MobBase" instance=ExtResource("1_gu5ds")]
script = ExtResource("2_o8rdq")
detection_range = 300.0
attack_range = 80.0
attack_cooldown = 3.0
roam_speed_multiplier = 0.5
attack_weights = {
"FlailCharge": 70,
"QuickSlash": 30
}
pause_duration_min = 0.5
pause_duration_max = 1.5
roam_duration_min = 0.8
roam_duration_max = 2.0
soul_pickup_scene = null

[node name="MovementComponent" parent="." index="2"]
max_speed = 120.0

[node name="Polygon2D" type="Polygon2D" parent="." index="4"]
position = Vector2(0, 3)
scale = Vector2(1.9687501, 2.642857)
color = Color(0.7786295, 0.15551496, 0.22629565, 1)
polygon = PackedVector2Array(-2.9629626, 1.945946, -3.5555553, -3.4054055, 0, -4.9189196, 3.5555553, -3.4054055, 2.9629626, 1.945946)

[node name="Hurtbox" type="Area2D" parent="." index="5"]
script = ExtResource("3_bssw2")
team = "enemy"
metadata/_custom_type_script = "uid://cutcl24p4stoe"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CircleShape2D_s2pa2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." index="6"]
shape = SubResource("CapsuleShape2D_rn783")

[node name="Abilities" type="Node" parent="." index="7"]

[node name="FlailCharge" type="Node" parent="Abilities" index="0"]
script = ExtResource("4_82rk8")
windup_duration = 0.7
charge_speed = 15.0
cooldown = 0.0
metadata/_custom_type_script = "uid://dhnv65d0xoc5a"

[node name="QuickSlash" type="Node" parent="Abilities" index="1"]
script = ExtResource("5_67syi")
windup_duration = 0.5
step_distance = 5.0
cooldown = 0.0
metadata/_custom_type_script = "uid://dhnv65d0xoc5a"
